--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@urql/exchange-graphcache": "^7.1.2",
     "@urql/next": "^1.1.1",
-    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "dotenv": "^16.4.5",
     "drizzle-kit": "^0.23.0",
     "drizzle-orm": "^0.32.0",
+    "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.403.0",
     "next": "14.2.4",
