--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "drizzle-kit": "^0.23.0",
     "drizzle-orm": "^0.32.0",
     "fs": "^0.0.1-security",
+    "graphql-type-json": "^0.3.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.403.0",
     "next": "14.2.4",
