feat. image upload

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@apollo/server": "^4.10.4",
     "@as-integrations/next": "^3.0.0",
+    "@aws-sdk/client-s3": "^3.620.0",
+    "@aws-sdk/s3-request-presigner": "^3.620.0",
     "@dnd-kit/core": "^6.1.0",
     "@dnd-kit/modifiers": "^7.0.0",
     "@dnd-kit/sortable": "^8.0.0",
@@ -24,6 +26,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@urql/exchange-graphcache": "^7.1.2",
     "@urql/next": "^1.1.1",
+    "aws-sdk": "^2.1664.0",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -32,12 +35,16 @@
     "drizzle-orm": "^0.32.0",
     "fs": "^0.0.1-security",
     "graphql-type-json": "^0.3.2",
+    "graphql-upload": "^16.0.2",
+    "graphql-upload-ts": "^2.1.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.403.0",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "sharp": "^0.33.4",
     "sweetalert2": "^11.12.3",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
