feat. sharing page & finished up

--- a/.env.example
+++ b/.env.example
@@ -17,4 +17,5 @@ BUCKET_ACCESS_KEY=""
 BUCKET_SECRET_ACCESS_KEY=""
 
 // Next.js
-NEXT_PUBLIC_APP_URL=""
+NEXT_PUBLIC_APP_URL="" // GraphQL Client URL
+NEXT_PUBLIC_PRODUCTION_URL="" // APP Production URL
